Addition of a new mathematical model for anomaly detection - Implemented a new Irwin-based anomaly analysis method - Added CandleAnomalousByIrvinServiceImpl for Irwin candle processing - Updated OpenAPI - Modified existing candle and metrics processing services - Updated SQL table structure
Добавление новой мат модели для выявления аномалий
- Внедрен новый метод анализа аномалий по Ирвину
- Добавлен сервис CandleAnomalousByIrvinServiceImpl для обработки свечей по Ирвину
- Обновлен OpenAPI
- Модифицированы существующие сервисы обработки свечей и метрик
- Обновлена структура SQL таблиц
