# api-gateway/src/main/resources/static/openapi.json
@@ -5,7 +5,7 @@
     "version": "1.0"
   },
   "paths": {
-    "/public/api/v1/upload-candles": {
+    "/anomaly/public/api/v1/upload-candles": {
       "post": {
         "summary": "Загрузка минутных свечей",
         "description": "Добавляет в базу данных минутные свечи за последние 24 часа для всех доступных компаний по их FIGI. Каждая свеча содержит следующие поля:\n\n- `open` (decimal): Цена открытия\n- `close` (decimal): Цена закрытия\n- `high` (decimal): Максимальная цена\n- `low` (decimal): Минимальная цена\n- `volume` (integer): Объём торгов\n- `time` (string, date-time): Временная метка свечи",
@@ -23,7 +23,7 @@
         }
       }
     },
-    "/public/api/v1/metrics": {
+    "/anomaly/public/api/v1/metrics": {
       "post": {
         "summary": "Обновление статистических метрик объёма",
         "description": "Вычисляет и обновляет метрики по объёму торгов для компаний. Расчёты выполняются по минутным свечам за всё время, сохранённое в базе данных. Используется следующая логика:\n\n- Объёмы торгов разбиваются на квартильные группы с помощью NTILE(4).\n- Из анализа исключаются крайние квартильные группы (1 и 4), чтобы минимизировать влияние выбросов.\n- По оставшимся данным вычисляются:\n  - Среднее значение объёма\n  - Среднеквадратичное отклонение относительно этого среднего\n\nМетрики сохраняются или возвращаются как часть объекта со следующими полями:\n\n- `avg_volume`: Средний объём торгов (без учёта выбросов)\n- `standard_deviation`: Среднеквадратичное отклонение объёма\n\nЕсли данных недостаточно, возвращаются значения по умолчанию (0.00).",
@@ -41,7 +41,25 @@
         }
       }
     },
-    "/public/api/v1/import": {
+    "/anomaly/public/api/v1/metrics-irvin": {
+      "post": {
+        "summary": "Обновление статистических метрик объёма по новой мат модели",
+        "description": "Вычисляет и обновляет метрики по объёму торгов для компаний. Расчёты выполняются по минутным свечам за всё время, сохранённое в базе данных. Используется следующая логика:\n\n- Объёмы торгов разбиваются на квартильные группы с помощью NTILE(4).\n- Из анализа исключаются крайние квартильные группы (1 и 4), чтобы минимизировать влияние выбросов.\n- По оставшимся данным вычисляются:\n  - Среднее значение объёма\n  - Среднеквадратичное отклонение относительно этого среднего\n\nМетрики сохраняются или возвращаются как часть объекта со следующими полями:\n\n- `avg_volume`: Средний объём торгов (без учёта выбросов)\n- `standard_deviation`: Среднеквадратичное отклонение объёма\n\nЕсли данных недостаточно, возвращаются значения по умолчанию (0.00).",
+        "responses": {
+          "200": {
+            "description": "Метрики успешно вычислены и обновлены.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/anomaly/public/api/v1/import": {
       "post": {
         "summary": "Импорт компаний из CSV-файла",
         "description": "Обновляет in-memory базу данных компаний на основе содержимого файла `figi.csv`. Каждая строка файла должна содержать три поля: название компании, FIGI и тикер. Перед добавлением данных выполняется проверка на уникальность по каждому из полей (`figi`, `company`, `ticker`). Если совпадения не найдено — компания добавляется в таблицу `_share`. В случае ошибок в формате строк (например, менее трёх полей), импорт прерывается.\n\nДля добавления новых компаний необходимо предварительно изменить файл `figi.csv`, дополнив его актуальными данными.",
@@ -59,7 +77,7 @@
         }
       }
     },
-    "/public/api/v1/minute/now": {
+    "/connector/public/api/v1/minute/now": {
       "get": {
         "summary": "Запуск процесса отслеживания минутных свечей",
         "description": "Инициирует потоковое отслеживание минутных свечей (раз в минуту) в реальном времени для всех доступных FIGI. При поступлении новой свечи происходит следующее:\n\n1. Свеча парсится и отправляется в очередь сообщений.\n2. Далее она обрабатывается компонентом анализа аномалий.\n3. Если объём свечи считается аномальным, то обработанное сообщение отправляется клиенту.\n\nПроцесс работает в фоне до явной остановки (см. `/minute/disconnection`).",
@@ -77,7 +95,7 @@
         }
       }
     },
-    "/public/api/v1/minute/disconnection": {
+    "/connector/public/api/v1/minute/disconnection": {
       "get": {
         "summary": "Остановка процесса отслеживания минутных свечей",
         "description": "Завершает ранее запущенный процесс отслеживания минутных свечей в реальном времени, инициированный через эндпоинт `/public/api/v1/minute/now`. После вызова этого метода подписка на поток рыночных данных закрывается, и новые свечи больше не поступают в систему обработки и анализа аномалий.",
