# definition-of-anomaly/src/main/java/ru/viktorgezz/definition_of_anomaly/controller/CandleMetricsController.java
@@ -1,14 +1,13 @@
 package ru.viktorgezz.definition_of_anomaly.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.viktorgezz.definition_of_anomaly.service.interf.CandleProcessingService;
 
 @RestController
-@RequestMapping("/public/api/v1")
+@RequestMapping("/anomaly/public/api/v1")
 public class CandleMetricsController {
 
     private final CandleProcessingService candleProcessing;
@@ -27,6 +26,12 @@ public class CandleMetricsController {
     @PostMapping("/metrics")
     public String updateMetrics() {
         candleProcessing.calculateStatsMetrics();
+        return "Успех";
+    }
+
+    @PostMapping("/metrics-irvin")
+    public String updateMetricsByIrvin() {
+        candleProcessing.calculateStatsMetricsByIrvin();
         return "Успех";
     }
 }
